--- a/public/src/index.html
+++ b/public/src/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200&family=Lobster+Two:ital@0;1&family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/5394381437.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
